--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 			<groupId>com.tremolosecurity.unison</groupId>
 			<artifactId>unison-sdk</artifactId>
 			<version>1.0.7</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mongodb</groupId>
@@ -52,7 +53,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- 
+			 
 			<plugin>
 
 				<artifactId>maven-assembly-plugin</artifactId>
@@ -72,7 +73,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			 -->
+			 
 		</plugins>
 	</build>
 </project>
